<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paperplanes.knowquiz.activity.GameOverActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin_3"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_2"
                android:textAlignment="center"
                android:textSize="@dimen/game_over_text"
                android:textColor="@android:color/white"
                android:text="@string/score"/>

            <TextView
                android:id="@+id/text_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="@dimen/game_over_text"
                android:textColor="@android:color/white"
                android:text="1230"/>

            <TextView
                android:id="@+id/text_high_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_3"
                android:padding="@dimen/common_padding_4"
                android:background="@color/high_score_bg"
                android:textAlignment="center"
                android:textSize="@dimen/high_score_text"
                android:textColor="@android:color/white"
                android:text="@string/new_record"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_6"
                android:layout_marginBottom="@dimen/common_margin_4"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_margin_1"
                    android:layout_marginEnd="@dimen/common_margin_1"
                    android:background="@drawable/bg_round_rect"
                    android:src="@drawable/ic_check"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_margin_5"
                    android:layout_marginEnd="@dimen/common_margin_5"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/game_over_stat_text"
                    android:text="@string/correct_answer"/>
                <TextView
                    android:id="@+id/text_correct_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/game_over_stat_text"
                    android:textColor="@android:color/white"
                    android:text="5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_6"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_margin_1"
                    android:layout_marginEnd="@dimen/common_margin_1"
                    android:background="@drawable/bg_round_rect"
                    android:src="@drawable/ic_cross"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_margin_5"
                    android:layout_marginEnd="@dimen/common_margin_5"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/game_over_stat_text"
                    android:text="@string/wrong_answer"/>
                <TextView
                    android:id="@+id/text_wrong_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/game_over_stat_text"
                    android:textColor="@android:color/white"
                    android:text="5"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_margin_1"
                android:layout_marginEnd="@dimen/common_margin_1"
                android:padding="@dimen/common_padding_5"
                android:onClick="onReplayClick"
                android:background="@drawable/selector_btn"
                android:drawableTop="@drawable/ic_replay"
                android:textColor="@android:color/white"
                android:textSize="@dimen/choices_text"
                android:text="@string/btn_replay"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_margin_1"
                android:layout_marginEnd="@dimen/common_margin_1"
                android:padding="@dimen/common_padding_5"
                android:onClick="onMenuClick"
                android:background="@drawable/selector_btn_green"
                android:drawableTop="@drawable/ic_menu"
                android:textColor="@android:color/white"
                android:textSize="@dimen/choices_text"
                android:text="@string/btn_menu"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding_5"
                android:onClick="onScoreClick"
                android:background="@drawable/selector_btn_green"
                android:drawableTop="@drawable/ic_chart"
                android:textColor="@android:color/white"
                android:textSize="@dimen/choices_text"
                android:text="@string/btn_score"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
