<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paperplanes.knowquiz.activity.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_padding_5"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/about_img_size"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/logo"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_margin_5"
            android:background="@drawable/bg_primary_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/settings_title_text"
                    android:textColor="@android:color/white"
                    android:text="@string/about_text"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/common_margin_1"
                    android:layout_marginBottom="@dimen/common_margin_4"
                    android:background="@android:color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_margin_3"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/common_margin_3"
                        android:layout_marginEnd="@dimen/common_margin_3"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/about_content_text"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/about_content_text"
                        android:textStyle="bold"
                        android:text="@string/version"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/about_content_text"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>